<resources>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="app_name">FoodRater</string>
    <string name="map_key" translatable="false">AIzaSyAy990njBsVxir4Mfwty9-SO0DXZaVDgfo</string>
    <string name="google_maps_key">AIzaSyAy990njBsVxir4Mfwty9-SO0DXZaVDgfo</string>
    <string name="appHelp">FoodRater Help Screen</string>
    <string name="appHelpExtra">FoodRater offers the User the option to keep track of their favourite foods from takeaways.</string>
    <string name="appDisplayName">FoodRater</string>
    <string name="appDesc">FoodRater provides the user with a quick and easy way to manage a variety of Food Items and add your favourite Food item or takeaway to Favourites.</string>
    <string name="appMoreInfo">For more information about FoodRater or to provide feedback please visit our website.</string>
    <string name="appAbout">About FoodRater</string>

    <string name="searchFoodItemsLbl">Search Food Item\'s</string>
    <string name="favouritesFoodLbl">Favourite Food Item\'s</string>
    <string name="addAFoodLbl">TakeAway Check In</string>
    <string name="addFoodBtnLbl">Add Food</string>
    <string name="saveFoodBtn">Save Food</string>
    <string name="recentlyViewedLbl">Recently Added Food Item\'s</string>
    <string name="foodNameLbl">Name :</string>
    <string name="foodShopLbl">Restaurant :</string>
    <string name="foodDateLbl">Date :</string>
    <string name="foodPriceLbl">Price :</string>
    <string name="foodRatingLbl">Star Rating</string>
    <string name="foodDetailsLbl">Full Food Item Details</string>
    <string name="informationLbl">Information</string>
    <string name="emptyMessageLbl">You have no Food Item\'s added!</string>
    <string name="deleteFoodLbl">Delete Food Items</string>
    <string name="editFoodLbl">Edit a Food Item</string>

    <string-array name="foodTypes">
        <item>All Types</item>
        <item>Favourites</item>
        <item>\> 3\* Rating</item>
    </string-array>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="buttonHome">Navigate to Home</string>
    <string name="title_profile">Logged In User</string>
    <string name="FoodRater">FoodRater</string>
    <string name="helpTitle">Help Screen</string>
    <string name="title_activity_maps">Map</string>

</resources>